---------------------------------------------------------------------------------------------------
Version: 2.12.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.12.1
Date: 2025-11-30
  Fixes:
    - Fixed that pasting an assembler with modules would break module requests.
---------------------------------------------------------------------------------------------------
Version: 2.12.0
Date: 2025-11-29
  Features:
    - Added blueprint setting: "Custom blueprint name" to use something other than the stage's name.
    - Added icon selector to renaming UI.
---------------------------------------------------------------------------------------------------
Version: 2.11.1
Date: 2025-11-29
  Changes:
    - "Reset space platform tiles" will no longer try to connect ghosted tiles
---------------------------------------------------------------------------------------------------
Version: 2.11.0
Date: 2025-11-29
  Features:
    - Tile changes now stop propagating to further stages when blocked by an entity, preventing invalid tile configurations on space platforms.
    - Added "Reset space platforms tiles" action, that places minimal space platform tiles using a heuristic algorithm.
---------------------------------------------------------------------------------------------------
Version: 2.10.7
Date: 2025-11-25
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.10.6
Date: 2025-11-25
  Features:
    - Added experimental better blueprint paste handling! This supports pasting wires from cut entities, and pasting from the blueprint library. Currently experimental, can be disabled with a new per-player setting.
    - Allow disabling staged tiles in space platforms.
---------------------------------------------------------------------------------------------------
Version: 2.10.5
Date: 2025-11-23
  Bugfixes: