@@ -185,6 +185,8 @@ rename-stage=Rename stage
 rebuild-stage=[img=utility/refresh] Rebuild current stage [img=info]
 rebuild-stage-tooltip=Rebuilds all entities (and tiles, if enabled) to match stored state.\nThis may resolve inconsistencies due to bugs.
 rebuild-all-stages=[img=utility/refresh] Rebuild all stages
+resync-with-world=[img=utility/reset] Resync with world [img=info]
+resync-with-world-tooltip=Reads the actual world state into the project, then rebuilds all stages.\nUseful if world state has diverged from stored data.
 
 disable-all-entities=Disable all entities
 enable-all-entities=Enable all entities
@@ -305,6 +307,8 @@ cancel=Cancel
 
 rebuild-all-stages=Rebuild all stages
 rebuilding-stage=Rebuilding __1__
+resync-with-world=Resync with world
+reading-stage=Reading __1__
 
 [bp100.gui.blueprint-book-task]
 assembling-blueprint-book=Assembling blueprint book
